[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "planeforge"
version = "0.1.0"
description = "Open-source toolkit for converting RC model plans into CNC-ready kits."
requires-python = ">=3.13"
dependencies = [
    "PyMuPDF==1.28.0",
    "PySide6==6.11.1",
]

authors = [
    { name = "Alexandru Nistor" }
]

[project.scripts]
planeforge = "planeforge.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]